; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/enc/extr_frame_enc.c_SetLoopParams.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/enc/extr_frame_enc.c_SetLoopParams.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, float)* @SetLoopParams to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SetLoopParams(i32* %0, float %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca float, align 4
  store i32* %0, i32** %3, align 8
  store float %1, float* %4, align 4
  %5 = load float, float* %4, align 4
  %6 = call float @Clamp(float %5, float 0.000000e+00, float 1.000000e+02)
  store float %6, float* %4, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = load float, float* %4, align 4
  %9 = call i32 @VP8SetSegmentParams(i32* %7, float %8)
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @SetSegmentProbas(i32* %10)
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @ResetStats(i32* %12)
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @ResetSSE(i32* %14)
  ret void
}

declare dso_local float @Clamp(float, float, float) #1

declare dso_local i32 @VP8SetSegmentParams(i32*, float) #1

declare dso_local i32 @SetSegmentProbas(i32*) #1

declare dso_local i32 @ResetStats(i32*) #1

declare dso_local i32 @ResetSSE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
